Aress7/src/objects/ResourceAbsence.object
<CustomObject>
    <fields>
        <fullName>Absence_Offset__c</fullName>
        <formula>Start  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absence Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial Day</fullName>
                </value>
                <value>
                    <fullName>One Day</fullName>
                </value>
                <value>
                    <fullName>Longer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTimeFrom__c</fullName>
        <label>Estimated Travel Time From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTime__c</fullName>
        <label>Estimated Travel Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Slot_Options__c</fullName>
        <label>Slot Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning (7am -12pm)</fullName>
                </value>
                <value>
                    <fullName>Afternoon (12pm - 8pm)</fullName>
                </value>
                <value>
                    <fullName>Evening (3pm - 8pm)</fullName>
                </value>
                <value>
                    <fullName>Full Day (7am - 8pm)</fullName>
                </value>
                <value>
                    <fullName>Evening (5pm - 8pm)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>FSL__Break</fullName>
        <active>true</active>
        <label>Break</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Non_Availability</fullName>
        <active>true</active>
        <label>Non Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__Absence_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__Gantt_Color__c)) &amp;&amp; (NOT(REGEX(FSL__Gantt_Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__Gantt_Color__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__NoAddressOnBreaks</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $RecordType.Name =&apos;Break&apos; , NOT(ISBLANK(Street) &amp;&amp; ISBLANK(City) &amp;&amp; ISBLANK(Country) &amp;&amp; ISBLANK(State) &amp;&amp; ISBLANK(PostalCode)  ))</errorConditionFormula>
        <errorMessage>Cannot add address to resource absence with record type &apos;Break&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startShouldPrecedeEnd</fullName>
        <active>true</active>
        <errorConditionFormula>End &lt;=  Start</errorConditionFormula>
        <errorDisplayField>Start</errorDisplayField>
        <errorMessage>The Start Time must be earlier than the End Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Validation_for_overtime_Resource_Abs</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
IF(CASE( VALUE(MID(TEXT(Start - 5.5),12,2)) , 
0, 19,
1, 20,
2, 21,
3, 22,
4, 23,
5, 0,
6, 1,
7, 2,
8, 3,
9,  4,
10,  5,
11,  6,
12,  7,
13,  8,
14,  9,
15,  10,
16,  11,
17,  12,
18,  13,
19,  14,
20,  15,
21,  16,
22,  17,
23,  18,
0)&lt;4,ISNEW(),false),
CASE( VALUE(MID(TEXT(End- 5.5 ),12,2)) , 
0, 19,
1, 20,
2, 21,
3, 22,
4, 23,
5, 0,
6, 1,
7, 2,
8, 3,
9,  4,
10,  5,
11,  6,
12,  7,
13,  8,
14,  9,
15,  10,
16,  11,
17,  12,
18,  13,
19,  14,
20,  15,
21,  16,
22,  17,
23,  18,
0)&gt;8,
RecordType.DeveloperName =&apos;Overtime&apos;
)</errorConditionFormula>
        <errorMessage>Overtime can be booked into the4.pm. to 8p.m.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overtime_Resource_Absence_validation1</fullName>
        <active>true</active>
        <description>Validation Rule on Resource Absence (only for &quot;Overtime&quot; record type) that &quot;Start Time&quot; field cannot be less than 4pm same day</description>
        <errorConditionFormula>IF(TEXT(Start)&lt;&gt;TEXT(End), AND(ISNEW(), RecordType.DeveloperName =&apos;Overtime&apos;, VALUE( MID( TEXT( Start), 12, 2 ) ) &lt; 16, DATEVALUE(Start-5.5)  &lt;&gt;  DATEVALUE(End)), false)</errorConditionFormula>
        <errorMessage>&quot;Overtime can only be booked After 4 pm.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overtime_Resource_Absence_validation2</fullName>
        <active>true</active>
        <description>&quot;End Time&quot; field cannot be more than 8pm on the same day</description>
        <errorConditionFormula>IF(TEXT(Start)&lt;&gt;TEXT(End), AND(ISNEW(), RecordType.DeveloperName =&apos;Overtime&apos;, VALUE( MID( TEXT( End), 12, 2 ) ) &gt; 20, DATEVALUE(Start) &lt;&gt; DATEVALUE(End-5.5)
), false)</errorConditionFormula>
        <errorMessage>End time should not be exceeded than 8p.m.</errorMessage>
    </validationRules>
</CustomObject>